# saudi_id.rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: lint.yml  publish_release.yml  release.yml  test.yml
examples/: generate.rs  validate.rs
src/: lib.rs
