[package]
name = "saudi_id"
version = "0.1.0"
authors = ["zefr0x"]
edition = "2021"
description = "Parse (validate) or randomly generate Saudi Arabian national IDs"
readme = "README.md"
homepage = "https://github.com/zefr0x/saudi_id.rs"
repository = "https://github.com/zefr0x/saudi_id.rs"
license = "LGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luhnr = "0.3.4"

[[example]]
name = "validate"
path = "examples/validate.rs"

[[example]]
name = "generate"
path = "examples/generate.rs"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
fuzzy_provenance_casts = "warn"
lossy_provenance_casts = "warn"
missing_docs = "warn"
multiple_supertrait_upcastable = "warn"
must_not_suspend = "warn"
non_ascii_idents = "forbid"
non_exhaustive_omitted_patterns = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_code = "deny"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "deny"
format_push_string = "warn"
get_unwrap = "warn"
infinite_loop = "warn"
integer_division = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "warn"
pattern_type_mismatch = "warn"
pub_with_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "warn"
single_char_lifetime_names = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "forbid"
